try foreground service instead

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
     <application
         android:name=".JBeaconApplication"
@@ -53,11 +55,11 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".BackgroundScanBroadcastReceiver" android:exported="false">
+        <service android:name=".BeaconService" android:exported="false" android:foregroundServiceType="shortService">
             <intent-filter>
                 <action android:name="audio.rabid.jbeacon.BLUETOOTH_ADVERTISEMENTS" />
             </intent-filter>
-        </receiver>
+        </service>
     </application>
 
 </manifest>
