--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -29,8 +29,6 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
     <application
         android:name=".JBeaconApplication"
@@ -55,11 +53,11 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".BeaconService" android:exported="false" android:foregroundServiceType="shortService">
+        <receiver android:name=".BackgroundScanBroadcastReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="audio.rabid.jbeacon.BLUETOOTH_ADVERTISEMENTS" />
             </intent-filter>
-        </service>
+        </receiver>
     </application>
 
 </manifest>
